GeneWeb version 3.03
--------------------

* Languages
  - [23 Jan 00] Added Russian (Konstantin Abakumov).

* Setup program (gwsetup)
  - [07 Feb 00] Changed some Swedish files (Lars Gustavsson).
  - [27 Jan 00; 03 Feb 00] Added a comment in the introduction text
    telling not to delete the window! (English, French, Swedish versions)

* GeneWeb Service/CGI (gwd)
  - [24 Feb 00] In latest births and deaths, display by month.
  - [02 Feb 00] In personal pages, relations are now displayed before notes.
  - [20 Jan 00] When sorting the children, use now the baptism date
    when there is no birth date.
  - [18 Jan 00] Fixed bug: when selecting no data base, the default page
    asks for a data base name, but in CGI mode when entering a data base,
    it did not work (incorrect URL).

* Gedcom to GeneWeb (ged2gwb)
  - [19 Feb 00] Added option "-uin" (untreated in notes) to put unused
    Gedcom tags (of indiduals) in notes.

* Base configuration files (base.gwf)
  - [24 Feb 00] Added variable "latest_event" to give the number of latest
    events (births, deaths) displayed.
  - [25 Jan 00] Added variable "public_if_titles": if "yes", consider persons
    having nobility titles as public ("public" means that their private data
    is displayed even if their dates is less than 150 years). Warning: the
    default of this variable is "no": it is a behavior change in GeneWeb,
    relatively to previous versions (but don't worry: with this change, 
    private data is better protected).

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [14 Feb 00] Changed the term "place" of nobility titles into "estate"
    ("domaine" in French), to avoid the confusion with the "place" of
    "birth", "death", and so on. Changed also "all the places" into
    "all the estates".
  - [01 Feb 00] Fixed some Swedish translations (Lars Gustavsson)
  - [26 Jan 00] Fixed several Portuguese translations (Jose Paulo Moitinho
    de Almeida).