@@ -10,6 +10,8 @@ GeneWeb version 3.03
     telling not to delete the window! (English, French, Swedish versions)
 
 * GeneWeb Service/CGI (gwd)
+  - [04 Mar 00] In person and family forms, added input area to specify
+    a number greater than 1 of titles and children to insert.
   - [24 Feb 00] In latest births and deaths, display by month.
   - [02 Feb 00] In personal pages, relations are now displayed before notes.
   - [20 Jan 00] When sorting the children, use now the baptism date
